--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
                             <ul class="social-list">
                                 <li class="social-li">
                                     <a class="social-links">
-                                        <svg width="16" height="16"></svg>
+                                        <svg  class="social-svg" width="16" height="16">
+                                            <use href="./images/svg#instagram"></use>
+                                            <use href="./images/svg#twiter"></use>
+                                            <use href="./images/svg#facebook"></use>
+                                            <use href="./images/svg#linkedin"></use>
+                                        </svg>
                                     </a>
                                 </li>
                             </ul>
@@ -129,7 +134,12 @@
                             <ul class="social-list">
                                 <li class="social-li">
                                     <a class="social-links">
-                                        <svg width="16" height="16"></svg>
+                                        <svg  class="social-svg" width="16" height="16">
+                                            <use href="./images/svg#instagram"></use>
+                                            <use href="./images/svg#twiter"></use>
+                                            <use href="./images/svg#facebook"></use>
+                                            <use href="./images/svg#linkedin"></use>
+                                        </svg>
                                     </a>
                                 </li>
                             </ul>
@@ -143,7 +153,12 @@
                             <ul class="social-list">
                                 <li class="social-li">
                                     <a class="social-links">
-                                        <svg width="16" height="16"></svg>
+                                        <svg  class="social-svg" width="16" height="16">
+                                            <use href="./images/svg#instagram"></use>
+                                            <use href="./images/svg#twiter"></use>
+                                            <use href="./images/svg#facebook"></use>
+                                            <use href="./images/svg#linkedin"></use>
+                                        </svg>
                                     </a>
                                 </li>
                             </ul>
@@ -157,7 +172,12 @@
                             <ul class="social-list">
                                 <li class="social-li">
                                     <a class="social-links">
-                                        <svg  width="16" height="16"></svg>
+                                        <svg  class="social-svg" width="16" height="16">
+                                            <use href="./images/svg#instagram"></use>
+                                            <use href="./images/svg#twiter"></use>
+                                            <use href="./images/svg#facebook"></use>
+                                            <use href="./images/svg#linkedin"></use>
+                                        </svg>
                                     </a>
                                 </li>
                             </ul>
