--- a/index.html
+++ b/index.html
@@ -117,10 +117,17 @@
                                     <a class="social-links">
                                         <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/svg#instagram"></use>
-                                            <use href="./images/svg#twiter"></use>
-                                            <use href="./images/svg#facebook"></use>
-                                            <use href="./images/svg#linkedin"></use>
                                         </svg>
+                                         <svg  class="social-svg" width="16" height="16">
+                                            <use href="./images/svg#twiter"></use>
+                                        </svg>
+                                         <svg  class="social-svg" width="16" height="16">
+                                            <use href="./images/svg#facebook"></use>
+                                        </svg>
+                                         <svg  class="social-svg" width="16" height="16">
+                                            <use href="./images/svg#i#linkedin"></use>
+                                        </svg>
+                                    </a>
                                     </a>
                                 </li>
                             </ul>
@@ -133,12 +140,18 @@
                             <p class="team-list-text">Frontend Developer</p>
                             <ul class="social-list">
                                 <li class="social-li">
-                                    <a class="social-links">
+                                     <a class="social-links">
                                         <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/svg#instagram"></use>
+                                        </svg>
+                                         <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/svg#twiter"></use>
+                                        </svg>
+                                         <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/svg#facebook"></use>
-                                            <use href="./images/svg#linkedin"></use>
+                                        </svg>
+                                         <svg  class="social-svg" width="16" height="16">
+                                            <use href="./images/svg#i#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -155,9 +168,15 @@
                                     <a class="social-links">
                                         <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/svg#instagram"></use>
+                                        </svg>
+                                         <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/svg#twiter"></use>
+                                        </svg>
+                                         <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/svg#facebook"></use>
-                                            <use href="./images/svg#linkedin"></use>
+                                        </svg>
+                                         <svg  class="social-svg" width="16" height="16">
+                                            <use href="./images/svg#i#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -174,9 +193,15 @@
                                     <a class="social-links">
                                         <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/svg#instagram"></use>
+                                        </svg>
+                                         <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/svg#twiter"></use>
+                                        </svg>
+                                         <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/svg#facebook"></use>
-                                            <use href="./images/svg#linkedin"></use>
+                                        </svg>
+                                         <svg  class="social-svg" width="16" height="16">
+                                            <use href="./images/svg#i#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
