--- a/index.html
+++ b/index.html
@@ -118,16 +118,21 @@
                                         <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/svg#instagram"></use>
                                         </svg>
+                                         </a>
+                                       <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/svg#twiter"></use>
                                         </svg>
+                                            </a>
+                                          <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/svg#facebook"></use>
                                         </svg>
+                                               </a>
+                                               <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/svg#i#linkedin"></use>
                                         </svg>
-                                    </a>
                                     </a>
                                 </li>
                             </ul>
