--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                                </a>
                                                <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#i#linkedin"></use>
+                                            <use href="./images/svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -162,7 +162,7 @@
                                                </a>
                                                <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#i#linkedin"></use>
+                                            <use href="./images/svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -193,7 +193,7 @@
                                                </a>
                                                <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#i#linkedin"></use>
+                                            <use href="./images/svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -224,7 +224,7 @@
                                                </a>
                                                <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#i#linkedin"></use>
+                                            <use href="./images/svg#linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
