--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li class="second-list">
                         <div class="icons-div">
                             <svg width="64" height="64">
-                                <use href="./images/antenna 1.svg#icon1"></use>
+                                <use href="icons-svg#icon-antenna"></use>
                             </svg>
                         </div>
                         <h3 class="list-title">Strategy</h3>
@@ -72,7 +72,7 @@
                     <li class="second-list">
                         <div class="icons-div">
                             <svg width="64" height="64">
-                                <use href="./images/astronaut 1.svg#icon2"></use>
+                                <use href="./images/icons-svg#icon-clock"></use>
                             </svg>
                         </div>
                         <h3 class="list-title">Punctuality</h3>
@@ -83,7 +83,7 @@
                     <li class="second-list">
                         <div class="icons-div">
                             <svg width="64" height="64">
-                                <use href="./images/diagram 1.svg#icon3"></use>
+                                <use href="./images/icons-svg#icon-diagram"></use>
                             </svg>
                         </div>
                         <h3 class="list-title">Diligence</h3>
@@ -94,7 +94,7 @@
                     <li class="second-list">
                         <div class="icons-div">
                             <svg width="64" height="64">
-                                <use href="./images/clock 1.svg#icon4"></use>
+                                <use href="./images/icons-svg#icon-astronaut"></use>
                             </svg>
                         </div>
                         <h3 class="list-title">Technologies</h3>
@@ -116,22 +116,22 @@
                                 <li class="social-li">
                                     <a class="social-links">
                                         <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#instagram"></use>
+                                            <use href="./images/icons-svg#icon-instagram></use>
                                         </svg>
                                          </a>
                                        <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#twiter"></use>
+                                            <use href="./images/icons-svg#icon-twitter"></use>
                                         </svg>
                                             </a>
                                           <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#facebook"></use>
+                                            <use href="./images/icons-svg#icon-facebook"></use>
                                         </svg>
                                                </a>
                                                <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#linkedin"></use>
+                                            <use href="./images/icons-svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -147,22 +147,22 @@
                                 <li class="social-li">
                                      <a class="social-links">
                                         <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#instagram"></use>
+                                            <use href="./images/icons-svg#icon-instagram"></use>
                                         </svg>
                                          </a>
                                        <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#twiter"></use>
+                                            <use href="./images/icons-svg#icon-twitter"></use>
                                         </svg>
                                             </a>
                                           <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#facebook"></use>
+                                            <use href="./images/icons-svg#icon-facebook"></use>
                                         </svg>
                                                </a>
                                                <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#linkedin"></use>
+                                            <use href="./images/icons-svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -178,22 +178,22 @@
                                 <li class="social-li">
                                    <a class="social-links">
                                         <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#instagram"></use>
+                                            <use href="./images/icons-svg#icon-instagram"></use>
                                         </svg>
                                          </a>
                                        <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#twiter"></use>
+                                            <use href="./images/icons-svg#icon-twitter"></use>
                                         </svg>
                                             </a>
                                           <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#facebook"></use>
+                                            <use href="./images/icons-svg#icon-facebook"></use>
                                         </svg>
                                                </a>
                                                <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#linkedin"></use>
+                                            <use href="./images/icons-svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
@@ -209,22 +209,22 @@
                                 <li class="social-li">
                                     <a class="social-links">
                                         <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#instagram"></use>
+                                            <use href="./images/icons-svg#icon-instagram"></use>
                                         </svg>
                                          </a>
                                        <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#twiter"></use>
+                                            <use href="./images/icons-svg#icon-twitter"></use>
                                         </svg>
                                             </a>
                                           <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#facebook"></use>
+                                            <use href="./images/icons-svg#icon-facebook"></use>
                                         </svg>
                                                </a>
                                                <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/svg#linkedin"></use>
+                                            <use href="./images/icons-svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
                                 </li>
