--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li class="second-list">
                         <div class="icons-div">
                             <svg width="64" height="64">
-                                <use href="icons.svg#icon-antenna"></use>
+                                <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
                         <h3 class="list-title">Strategy</h3>
