--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                             <h3 class="team-list-title">Mark Guerrero</h3>
                             <p class="team-list-text">Product Designer</p>
                             <ul class="social-list">
-                                <li class="social-li">
-                                    <a class="social-links">
+                               <li class="social-li">
+                                     <a class="social-links">
                                         <svg  class="social-svg" width="16" height="16">
-                                            <use href="./images/icons.svg#icon-instagram></use>
+                                            <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                          </a>
                                        <a class="social-links">
