--- a/index.html
+++ b/index.html
@@ -119,16 +119,22 @@
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                          </a>
+                                   </li>
+                                   <li class="social-li">
                                        <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                             </a>
+                                        </li>
+                                       <li class="social-li">
                                           <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                                </a>
+                                            </li>
+                                           <li class="social-li">
                                                <a class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
