--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </a>
                 <ul class="list-container">
                     <li class="nav-list">
-                        <a class="menu-link" href="./index.html">Studio</a>
+                        <a class="menu-link current" href="./index.html">Studio</a>
                     </li>
                     <li class="nav-list">
                         <a class="menu-link" href="">Portfolio</a>
