--- a/index.html
+++ b/index.html
@@ -114,28 +114,28 @@
                             <p class="team-list-text">Product Designer</p>
                             <ul class="social-list">
                                <li class="social-li">
-                                     <a class="social-links">
+                                     <a href="" class="social-links">
                                         <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                          </a>
                                    </li>
                                    <li class="social-li">
-                                       <a class="social-links">
+                                       <a href="" class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                             </a>
                                         </li>
                                        <li class="social-li">
-                                          <a class="social-links">
+                                          <a href="" class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                                </a>
                                             </li>
                                            <li class="social-li">
-                                               <a class="social-links">
+                                               <a  href="" class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
@@ -152,27 +152,27 @@
                             <ul class="social-list">
                             <li class="social-li">
                                      <a class="social-links">
-                                        <svg  class="social-svg" width="16" height="16">
+                                        <svg href="" class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                          </a>
                                    </li>
                                    <li class="social-li">
-                                       <a class="social-links">
+                                       <a href="" class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                             </a>
                                         </li>
                                        <li class="social-li">
-                                          <a class="social-links">
+                                          <a href="" class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                                </a>
                                             </li>
                                            <li class="social-li">
-                                               <a class="social-links">
+                                               <a href="" class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
@@ -188,28 +188,28 @@
                             <p class="team-list-text">Marketing</p>
                             <ul class="social-list">
                                 <li class="social-li">
-                                     <a class="social-links">
+                                     <a href="" class="social-links">
                                         <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                          </a>
                                    </li>
                                    <li class="social-li">
-                                       <a class="social-links">
+                                       <a href="" class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                             </a>
                                         </li>
                                        <li class="social-li">
-                                          <a class="social-links">
+                                          <a href="" class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                                </a>
                                             </li>
                                            <li class="social-li">
-                                               <a class="social-links">
+                                               <a href="" class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
@@ -225,29 +225,29 @@
                             <p class="team-list-text">UI Designer</p>
                             <ul class="social-list">
                                <li class="social-li">
-                                     <a class="social-links">
-                                        <svg  class="social-svg" width="16" height="16">
+                                     <a href="" class="social-links">
+                                        <svg class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                          </a>
                                    </li>
                                    <li class="social-li">
-                                       <a class="social-links">
-                                         <svg  class="social-svg" width="16" height="16">
+                                       <a href="" class="social-links">
+                                         <svg class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                             </a>
                                         </li>
                                        <li class="social-li">
-                                          <a class="social-links">
+                                          <a href="" class="social-links">
                                          <svg  class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                                </a>
                                             </li>
                                            <li class="social-li">
-                                               <a class="social-links">
-                                         <svg  class="social-svg" width="16" height="16">
+                                               <a href="" class="social-links">
+                                         <svg class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
