--- a/index.html
+++ b/index.html
@@ -274,6 +274,13 @@
                     <li class="fourth-list">
                          <div>
                         <img src="./images/img6.jpg" alt="img" width="360" class="img">
+                             <p class="overlay">
+              - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+            </p>
+          </div>
+          <div class="team-list-content">
+            <h3 class="team-list-item-name">John Doe</h3>
+            <p class="team-list-item-position">Front-end Developer</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Cashless Payment</h3>
