--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             <ul class="social-list">
                             <li class="social-li">
                                      <a class="social-links">
-                                        <svg href="" class="social-svg" width="16" height="16">
+                                        <svg class="social-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                          </a>
@@ -296,7 +296,7 @@
                             <p class="list-text">App</p>
                         </div>
                     </li>
-                    <li class="fourth-list">]
+                    <li class="fourth-list">
                          <div>
                         <img src="./images/img8.jpg" alt="img" width="360" class="img">
                                </div>
