--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div>
+                         <div class="overlay-div">
                         <img src="./images/img6.jpg" alt="img" width="360" class="img">
                              <p class="overlay">
-              - 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+               14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
             </p>
           </div>
           <div class="team-list-content">
