--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <h2 class="subtitle">Our Portfolio</h2>
                 <ul class="fourth-section-list">
                     <li class="fourth-list">
-                        <div>
+                        <div class="overlay-div">
                         <img src="./images/img5.jpg" alt="img" width="360" class="img">
                         </div>
                         <div class="div">
@@ -288,7 +288,7 @@
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div>
+                         <div class="overlay-div">
                         <img src="./images/img7.jpg" alt="img" width="360" class="img">
                                </div>
                         <div class="div">
@@ -297,7 +297,7 @@
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div>
+                         <div class="overlay-div">
                         <img src="./images/img8.jpg" alt="img" width="360" class="img">
                                </div>
                         <div class="div">
@@ -306,7 +306,7 @@
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div>
+                         <div class="overlay-div">
                         <img src="./images/img9.jpg" alt="img" width="360" class="img">
                                </div>
                         <div class="div">
@@ -315,7 +315,7 @@
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div>
+                         <div class="overlay-div">
                         <img src="./images/img10.jpg" alt="img" width="360" class="img">
                                </div>
                         <div class="div">
