--- a/index.html
+++ b/index.html
@@ -290,7 +290,13 @@
                     <li class="fourth-list">
                          <div class="overlay-div">
                         <img src="./images/img7.jpg" alt="img" width="360" class="img">
-                               </div>
+                              <p class="overlay">
+               14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+            </p>
+          </div>
+          <div class="team-list-content">
+            <h3 class="team-list-item-name">John Doe</h3>
+            <p class="team-list-item-position">Front-end Developer</p> </div>
                         <div class="div">
                             <h3 class="list-title">Meditation App</h3>
                             <p class="list-text">App</p>
@@ -299,6 +305,13 @@
                     <li class="fourth-list">
                          <div class="overlay-div">
                         <img src="./images/img8.jpg" alt="img" width="360" class="img">
+                             <p class="overlay">
+               14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+            </p>
+          </div>
+          <div class="team-list-content">
+            <h3 class="team-list-item-name">John Doe</h3>
+            <p class="team-list-item-position">Front-end Developer</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Taxi Service</h3>
@@ -308,6 +321,13 @@
                     <li class="fourth-list">
                          <div class="overlay-div">
                         <img src="./images/img9.jpg" alt="img" width="360" class="img">
+                             <p class="overlay">
+               14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+            </p>
+          </div>
+          <div class="team-list-content">
+            <h3 class="team-list-item-name">John Doe</h3>
+            <p class="team-list-item-position">Front-end Developer</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Screen Illustrations</h3>
@@ -317,6 +337,13 @@
                     <li class="fourth-list">
                          <div class="overlay-div">
                         <img src="./images/img10.jpg" alt="img" width="360" class="img">
+                             <p class="overlay">
+               14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+            </p>
+          </div>
+          <div class="team-list-content">
+            <h3 class="team-list-item-name">John Doe</h3>
+            <p class="team-list-item-position">Front-end Developer</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Online Courses</h3>
