--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <h2 class="subtitle">Our Portfolio</h2>
                 <ul class="fourth-section-list">
                     <li class="fourth-list">
-                        <div class="overlay-div">
+                        <div>
                         <img src="./images/img5.jpg" alt="img" width="360" class="img">
                         </div>
                         <div class="div">
@@ -272,15 +272,9 @@
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div class="overlay-div">
+                         <div>
                         <img src="./images/img6.jpg" alt="img" width="360" class="img">
-                             <p class="overlay">
-               14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-            </p>
-          </div>
-          <div class="team-list-content">
-            <h3 class="team-list-item-name">John Doe</h3>
-            <p class="team-list-item-position">Front-end Developer</p>
+                             <p> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Cashless Payment</h3>
@@ -288,30 +282,17 @@
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div class="overlay-div">
+                         <div>
                         <img src="./images/img7.jpg" alt="img" width="360" class="img">
-                              <p class="overlay">
-               14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-            </p>
-          </div>
-          <div class="team-list-content">
-            <h3 class="team-list-item-name">John Doe</h3>
-            <p class="team-list-item-position">Front-end Developer</p> </div>
+                               </div>
                         <div class="div">
                             <h3 class="list-title">Meditation App</h3>
                             <p class="list-text">App</p>
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div class="overlay-div">
+                         <div>
                         <img src="./images/img8.jpg" alt="img" width="360" class="img">
-                             <p class="overlay">
-               14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-            </p>
-          </div>
-          <div class="team-list-content">
-            <h3 class="team-list-item-name">John Doe</h3>
-            <p class="team-list-item-position">Front-end Developer</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Taxi Service</h3>
@@ -319,15 +300,8 @@
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div class="overlay-div">
+                         <div>
                         <img src="./images/img9.jpg" alt="img" width="360" class="img">
-                             <p class="overlay">
-               14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-            </p>
-          </div>
-          <div class="team-list-content">
-            <h3 class="team-list-item-name">John Doe</h3>
-            <p class="team-list-item-position">Front-end Developer</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Screen Illustrations</h3>
@@ -335,15 +309,8 @@
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div class="overlay-div">
+                         <div>
                         <img src="./images/img10.jpg" alt="img" width="360" class="img">
-                             <p class="overlay">
-               14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
-            </p>
-          </div>
-          <div class="team-list-content">
-            <h3 class="team-list-item-name">John Doe</h3>
-            <p class="team-list-item-position">Front-end Developer</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Online Courses</h3>
