--- a/index.html
+++ b/index.html
@@ -263,8 +263,13 @@
                 <h2 class="subtitle">Our Portfolio</h2>
                 <ul class="fourth-section-list">
                     <li class="fourth-list">
-                        <div>
+                        <div class="overlay-div">
                         <img src="./images/img5.jpg" alt="img" width="360" class="img">
+                            <p> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                               </div>
+                        <div class="div">
+                            <h3 class="list-title">Cashless Payment</h3>
+                            <p class="list-text">Marketing</p>
                         </div>
                         <div class="div">
                             <h3 class="list-title">Banking App</h3>
@@ -272,7 +277,7 @@
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div>
+                         <div class="overlay-div">
                         <img src="./images/img6.jpg" alt="img" width="360" class="img">
                              <p> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                </div>
@@ -282,7 +287,12 @@
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div>
+                         <div class="overlay-div">
+                             <p> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                               </div>
+                        <div class="div">
+                            <h3 class="list-title">Cashless Payment</h3>
+                            <p class="list-text">Marketing</p>
                         <img src="./images/img7.jpg" alt="img" width="360" class="img">
                                </div>
                         <div class="div">
@@ -291,8 +301,13 @@
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div>
+                         <div class="overlay-div">
                         <img src="./images/img8.jpg" alt="img" width="360" class="img">
+                             <p> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                               </div>
+                        <div class="div">
+                            <h3 class="list-title">Cashless Payment</h3>
+                            <p class="list-text">Marketing</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Taxi Service</h3>
@@ -300,8 +315,13 @@
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div>
+                         <div class="overlay-div">
                         <img src="./images/img9.jpg" alt="img" width="360" class="img">
+                             <p> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                               </div>
+                        <div class="div">
+                            <h3 class="list-title">Cashless Payment</h3>
+                            <p class="list-text">Marketing</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Screen Illustrations</h3>
@@ -309,7 +329,12 @@
                         </div>
                     </li>
                     <li class="fourth-list">
-                         <div>
+                         <div class="overlay-div">
+                             <p> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                               </div>
+                        <div class="div">
+                            <h3 class="list-title">Cashless Payment</h3>
+                            <p class="list-text">Marketing</p>
                         <img src="./images/img10.jpg" alt="img" width="360" class="img">
                                </div>
                         <div class="div">
