--- a/index.html
+++ b/index.html
@@ -347,12 +347,45 @@
         </section>
     </main>
     <footer class="page-footer">
-        <div class="container">
+        <div class="container flex">
+            <div class="footer-div">
             <a class="second-logotype second-class" href="./index.html">
                 Web<span class="footer-logotype-span">Studio</span>
             </a>
             <p class="logotype-text" style="color: #F4F4FD">Increase the flow of customers and sales for your business with
                 digital marketing & growth solutions.</p>
+            </div>
+            <div>
+                <p class="footer-text">Social media</p>
+                <ul>
+                    <li class="social-li">
+                                     <a href="" class="social-links">
+                                        <svg  class="social-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram"></use>
+                                        </svg>
+                                         </a>
+                                   </li>
+                                   <li class="social-li">
+                                       <a href="" class="social-links">
+                                         <svg  class="social-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter"></use>
+                                        </svg>
+                                            </a>
+                                        </li>
+                                       <li class="social-li">
+                                          <a href="" class="social-links">
+                                         <svg  class="social-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook"></use>
+                                        </svg>
+                                               </a>
+                                            </li>
+                                           <li class="social-li">
+                                               <a href="" class="social-links">
+                                         <svg  class="social-svg" width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin"></use>
+                                        </svg>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
