--- a/index.html
+++ b/index.html
@@ -357,31 +357,31 @@
             </div>
             <div>
                 <p class="footer-text">Social media</p>
-                <ul>
+                <ul class="social-media-list">
                     <li class="social-li">
-                                     <a href="" class="social-links">
-                                        <svg  class="social-svg" width="16" height="16">
+                                     <a href="" class="social-menu-links">
+                                        <svg  class="social-svg" width="24" height="24">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                          </a>
                                    </li>
                                    <li class="social-li">
-                                       <a href="" class="social-links">
-                                         <svg  class="social-svg" width="16" height="16">
+                                       <a href="" class="social-menu-links">
+                                         <svg  class="social-svg" width="24" height="24">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                             </a>
                                         </li>
                                        <li class="social-li">
-                                          <a href="" class="social-links">
-                                         <svg  class="social-svg" width="16" height="16">
+                                          <a href="" class="social-menu-links">
+                                         <svg  class="social-svg" width="24" height="24">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                                </a>
                                             </li>
                                            <li class="social-li">
-                                               <a href="" class="social-links">
-                                         <svg  class="social-svg" width="16" height="16">
+                                               <a href="" class="social-menu-links">
+                                         <svg  class="social-svg" width="24" height="24">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
                                         </svg>
                 </ul>
